28/09/2002:
	- Updated KakaduImage and OpenJPEGImage classes to use Rawtile's new allocate() function. Also updated Transform
	  class to correctly update Rawtile capacity value


27/09/2022:
	- Major changes to the Rawtile class to enable move assignment and copy operators for C++11 compatible compilers.
	  This eliminates a number of unnecessary memory allocation and copy operations when using Rawtile objects,
	  improving speed and reducing memory usage


26/09/2022:
	- Modified SDS parameter parsing to allow single values to be passed as well as comma-separated pairs of values.
	- Added setMimeType() function to IIPResponse class to allow response Mime type to be modified on-demand.


22/09/2022:
	- Added check for empty HTTP CONTENT_LENGTH to avoid risk of passing NULL pointer to atoi()


21/09/2022:
	- Further disabled overly stringent ICC profile checks in libpng. Fixes https://github.com/ruven/iipsrv/issues/239


09/09/2022:
	- Fix to incorrect decoding of virtual levels within OpenJPEG: resolves https://github.com/ruven/iipsrv/issues/235


06/09/2022:
	- Added support for reading POST, PUT and other HTTP methods


02/09/2022:
	- Added XMP metadata support for Kakadu


23/07/2022:
	- Fix to IIIF parsing problem when requesting certain region sizes at "full" size


22/06/2022:
	- Large number of small changes including: conversion of functions to const functions, change of string parameters to
	  const reference and other const-related changes that fix the code analysis suggestions provided by SonarCloud


02/06/2022:
	- Corrected throw in FIF.cc to rethrow original exception and not make a copy.
	- Improved detection of pure tile requests in IIIF.cc. Improvements also to View class to eliminate rounding errors
	  when calculating view sizes.


30/05/2022:
	- Added check to output encoders (JPEG, PNG and WebP) to make sure we don't delete memory from RawTiles that is not
	  owned by the RawTile itself


26/05/2022: